修改了fetch组件，添加了join方法，setTime方法

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "page":"node page.publish.js"
   },
   "author": "linzp",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0"
+    "babel-preset-stage-3": "^6.17.0",
+    "gh-pages": "^0.12.0"
   }
 }
