--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "classnames": "^2.2.5",
     "lodash.debounce": "^4.0.8",
     "rc-animate": "^2.3.1",
+    "rc-queue-anim": "^0.13.0",
+    "rc-tween-one": "^0.11.11",
     "recompose": "^0.20.2"
   },
   "peerDependencies": {
