--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "candy-mobile",
-  "version": "1.1.9",
+  "version": "1.1.10",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -13,9 +13,7 @@
   "dependencies": {
     "blueimp-md5": "^2.5.0",
     "classnames": "^2.2.5",
-    "lodash.debounce": "^4.0.8",
-    "lodash.find": "^4.6.0",
-    "lodash.range": "^3.2.0",
+    "lodash": "^4.17.4",
     "rc-animate": "^2.3.1",
     "rc-queue-anim": "^0.13.0",
     "rc-tween-one": "^0.11.11",
