--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "candy-mobile",
-  "version": "1.1.16",
+  "version": "1.1.19",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -43,6 +43,7 @@
     "px2rem": "^0.5.0",
     "px2rem-loader": "^0.1.7",
     "react": "^15.4.1",
+    "react-addons-perf": "^15.4.2",
     "react-dom": "^15.4.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
